--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    
+    <header>
+        <h1></h1>
+    </header>
+    <nav>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
+    <div>        
+        <main>
+            <article></article>
+            <article></article>
+            <article></article>
+        </main>                    
+        <aside>
+            <p></p>
+        </aside>        
+    </div>
+
+    <footer>
+        <p></p>
+    </footer>
 </body>
 </html>
